add custom mandatee-person-selector component add mandatee-person-selector to user detail page add functionality to link user to mandatee add organization detail page add functionality to link organization to mandatees

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -137,6 +137,8 @@
   "document-unlink": "Reeds bezorgd document ontkoppelen",
   "unlink-document-message": "Bent u zeker dat u het document wilt ontkoppelen?",
   "unlink": "Ontkoppelen",
+  "unlink-mandatee": "Mandataris Ontkoppelen",
+  "unlink-mandatee-are-you-sure":"Ben je zeker dat je deze mandataris wil ontkoppelen?",
   "document-number": "Nummer Document",
   "document-title-edit": "Bestandsnaam wijzigen",
   "document-type": "Type document",
@@ -196,6 +198,7 @@
   "keyword": "Trefwoord",
   "latest-modified": "Laatst gewijzigd",
   "latest-modified-on": "Laatst gewijzigd op",
+  "linked-mandatees": "Gekoppelde mandatarissen",
   "loading-text": "Pagina is aan het laden",
   "search-loading-text": "Aan het zoeken",
   "login": "Aanmelden",
@@ -618,6 +621,7 @@
   "manage-users-general-info": "Algemene informatie",
   "manage-users-technical-info": "Technische informatie",
   "manage-user": "Gebruiker: {firstName} {lastName}",
+  "manage-organization": "Organisatie: {name}",
   "changes-could-not-be-saved-title": "Je wijzigingen kunnen niet opgeslagen worden.",
   "changes-could-not-be-saved-message": "{modelName} werd {time} aangepast door {firstname} {lastname}. Noteer je wijzigingen en hernieuw deze pagina om de laatste aanpassingen te zien.",
   "nota-changed-message": "Pas op, deze nota werd aangepast op {date} om {time}.",
