chore: clean up inline css styles

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1185,5 +1185,6 @@
   "thursday": "donderdag",
   "friday": "vrijdag",
   "saturday": "zaterdag",
-  "sunday": "zondag"
+  "sunday": "zondag",
+  "point": "punt"
 }
