--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -911,6 +911,7 @@
   "publications-tabs-late": "Te laat in BS",
   "publications-tabs-reports": "Rapporten",
   "publications-tabs-search": "Dossier zoeken",
+  "publications-tabs-shortlist": "Op te starten",
   "publication-reports-title": "Jaarlijkse rapporten",
   "publication-reports-last-request": "Laatst aangevraagd op {date} om {time} door {user}",
   "publication-reports-running": "Rapportgeneratie bezig...",
@@ -1177,5 +1178,6 @@
   "document-not-on-agendaitem": "Niet geüpload in agendapunt",
   "download-agenda-documents-info": "Deze functie brengt standaard alle documenten van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de documenten ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
   "no-ministers-submitted-on-this-agenda": "Er zijn geen ministers die een document hebben ingediend op deze agenda.",
-  "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan."
+  "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
+  "document-name": "Documentnaam"
 }
