--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -311,6 +311,7 @@
   "requested-for-session-kind": "Aangevraagd voor {kind}:",
   "resign": "Mandaat beëindigen",
   "results": "resultaten",
+  "all-results": "alle resultaten",
   "results-for": "resultaten voor",
   "row": "Rij",
   "save": "Opslaan",
