--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1031,7 +1031,7 @@
   "edit-status": "Status aanpassen",
   "view-in-signinghub": "Bekijken in SigningHub",
   "send-to-signinghub": "Doorsturen naar SigningHub",
-  "present-for-signing": "Aanbieden voor handtekening",
+  "present-for-signing": "Aanbieden voor handtekenen",
   "signing-status": "Handtekenstatus",
   "signing-status-to-be-presented": "Door te sturen voor tekenen",
   "signing-status-wait-for-signature": "Wacht op handtekening",
@@ -1177,5 +1177,8 @@
   "document-not-on-agendaitem": "Niet geüpload in agendapunt",
   "download-agenda-documents-info": "Deze functie brengt standaard alle documenten van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de documenten ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
   "no-ministers-submitted-on-this-agenda": "Er zijn geen ministers die een document hebben ingediend op deze agenda.",
-  "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan."
+  "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
+  "start-process": "Proces starten",
+  "signed": "Getekend",
+  "sent": "Verstuurd"
 }
