add check to see if user is KabinetsDossierbeheerder and has permission to view document

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -266,6 +266,7 @@
   "no-news-item": "Nog geen kort bestek voor dit agendapunt.",
   "no-number-yet": "Nog geen nummer",
   "user-rights": "Rechten",
+  "no-permission-to-view-document": "U heeft geen toegang om dit document te bekijken.",
   "no-rights": "Geen rechten",
   "no-rights-message": "U heeft zich aangemeld om binnen Kaleidos gebruiksrechten te bekomen.  De diensten van de kanselarij van de Vlaamse Regering behandelen uw aanvraag zo snel als mogelijk.  Dank voor uw begrip.",
   "page-not-found-title": "We kunnen de pagina niet vinden.",
