--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1182,5 +1182,12 @@
   "start-process": "Proces starten",
   "signed": "Getekend",
   "sent": "Verstuurd",
-  "case": "Dossier"
+  "case": "Dossier",
+  "edit-list": "Lijst bewerken",
+  "signing-hub-notifications": "Notificaties",
+  "to-sign-by": "Te handtekenen door",
+  "to-approve-by": "Goed te keuren door",
+  "no-signers-selected": "Geen ondertekenaars gekozen",
+  "no-approvers-selected": "Geen goedkeurders gekozen",
+  "no-notification-addresses-selected": "Geen notificatieadressen gekozen"
 }
