--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1190,6 +1190,8 @@
   "signing-hub-notifications": "Notificaties",
   "to-sign-by": "Te handtekenen door",
   "to-approve-by": "Goed te keuren door",
+  "to-approve": "Goed te keuren",
+  "cancelled": "Geweigerd",
   "no-signers-selected": "Geen ondertekenaars gekozen",
   "no-approvers-selected": "Geen goedkeurders gekozen",
   "no-notification-addresses-selected": "Geen notificatieadressen gekozen",
