feat: add versioned-document-card component

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1186,5 +1186,6 @@
   "friday": "vrijdag",
   "saturday": "zaterdag",
   "sunday": "zondag",
-  "point": "punt"
+  "point": "punt",
+  "pdf": "PDF"
 }
