feat: attach report in frontend, not in backend

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1187,5 +1187,6 @@
   "saturday": "zaterdag",
   "sunday": "zondag",
   "point": "punt",
-  "pdf": "PDF"
+  "pdf": "PDF",
+  "error-while-exporting-pdf": "Er ging iets mis tijdens het exporteren naar PDF"
 }
