feat: add modal for selecting signers for flow

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1204,5 +1204,6 @@
   "marked-for-signing": "Gemarkeerd voor handtekenen",
   "preview": "Voorvertoning",
   "filter-on-signer": "Filter op ondertekenaar",
-  "filter-content": "Filter inhoud"
+  "filter-content": "Filter inhoud",
+  "apply": "Toepassen"
 }
