feat: add email modal to add approver emails
This adds a new dependency, inputmask, which is used to validate the
input being an actual email address. This dependency is also used by
ember-appuniversum.

An extra CSS class is also added to ensure that masked inputs have
normal kerning.

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1205,5 +1205,7 @@
   "preview": "Voorvertoning",
   "filter-on-signer": "Filter op ondertekenaar",
   "filter-content": "Filter inhoud",
-  "apply": "Toepassen"
+  "apply": "Toepassen",
+  "email-address": "E-mailadres",
+  "add-approval": "Goedkeuring toevoegen"
 }
