chore: show warning when a file cannot be signed

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1208,5 +1208,7 @@
   "email-address": "E-mailadres",
   "add-approval": "Goedkeuring toevoegen",
   "add-notification": "Notificatie toevoegen",
-  "start-signing": "Tekenen opstarten"
+  "start-signing": "Tekenen opstarten",
+  "cannot-sign": "Kan niet ondertekenen",
+  "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden."
 }
