--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -236,6 +236,7 @@
   "new-session": "Nieuwe zitting",
   "new-subcase": "Procedurestap aanmaken",
   "new-version": "Nieuwe versie uploaden",
+  "create-new-version": "Nieuwe versie aanmaken",
   "news-item-label": "MR/MINISTRIEEL/PERSBERICHT",
   "newsletter": "Kort bestek",
   "newsletter-doc-date": "Datum van beschikbaarheid van de documenten",
@@ -1200,6 +1201,6 @@
   "download-agenda-documents-info": "Deze functie brengt standaard alle documenten van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de documenten ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
   "no-ministers-submitted-on-this-agenda": "Er zijn geen ministers die een document hebben ingediend op deze agenda.",
   "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
-  "save-as-new-version": "Als nieuwe versie opslaan",
-  "error-while-fetching-nota-content": "Er ging iets fout tijdens het ophalen van de nota inhoud"
+  "error-while-fetching-nota-content": "Er ging iets fout tijdens het ophalen van de nota inhoud",
+  "update": "Bijwerken"
 }
