KAS-4020 PR group review

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -144,7 +144,6 @@
   "document-type": "Type document",
   "no-document-type": "Geen document type",
   "document-type-pdf": "PDF",
-  "no-document-type": "Geen document type",
   "documents": "Documenten",
   "linked-documents": "Reeds bezorgde documenten",
   "documents-attached-to": "Bijbehorende documenten",
@@ -170,7 +169,7 @@
   "end-date": "Einddatum",
   "environment": "omgeving",
   "error": "Er is iets misgelopen..",
-  "document-name": "Naam document",
+  "name-document": "Naam document",
   "file-type": "Bestandstype",
   "files-of": "bestanden van de",
   "filter": "Filter",
@@ -1190,7 +1189,6 @@
   "download-agenda-decisions-info": "Deze functie brengt standaard alle beslissingen van deze vergadering samen in een zip bestand dat je dan kan downloaden. Ben je enkel geïnteresseerd in de beslissingen ingediend door of met één of meerdere ministers, vink dan de betreffende minister(s) aan.",
   "signed": "Getekend",
   "sent": "Verstuurd",
-  "case": "Dossier",
   "edit-list": "Lijst bewerken",
   "signing-hub-notifications": "Notificaties",
   "to-sign-by": "Te handtekenen door",
@@ -1207,7 +1205,6 @@
   "apply": "Toepassen",
   "email-address": "E-mailadres",
   "add-approval": "Goedkeuring toevoegen",
-  "add-notification": "Notificatie toevoegen",
   "start-signing": "Tekenen opstarten",
   "cannot-sign": "Kan niet ondertekenen",
   "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden.",
