--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1208,6 +1208,7 @@
   "start-signing": "Tekenen opstarten",
   "cannot-sign": "Kan niet ondertekenen",
   "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden.",
+  "cannot-create-sign-flow-message": "Dit stuk is niet verbonden aan uw organisatie en kan niet aangeboden worden om getekend te worden.",
   "signed-document": "Getekend document",
   "on": "op"
 }
