--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1217,5 +1217,7 @@
   "creating-sign-flows-message": "Handtekenstromen worden aangemaakt. Dit kan even duren.",
   "ongoing": "In verwerking",
   "delete-signed-piece": "Getekend document verwijderen",
-  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess voor dit document zal mee verwijderd worden."
+  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess voor dit document zal mee verwijderd worden.",
+  "delete-all-sign-flow-data": "Verwijder volledig handtekeningproces",
+  "verify-delete-all-sign-flow-data": "Bent u zeker dat u het handtekenproces volledig wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden."
 }
