--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1217,7 +1217,8 @@
   "creating-sign-flows-message": "Handtekenstromen worden aangemaakt. Dit kan even duren.",
   "ongoing": "In verwerking",
   "delete-signed-piece": "Getekend document verwijderen",
-  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess in Kaleidos voor dit document zal mee verwijderd worden. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
+  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess voor dit document zal mee verwijderd worden uit Kaleidos. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
   "delete-all-sign-flow-data": "Verwijder volledig handtekeningproces",
-  "verify-delete-all-sign-flow-data": "Bent u zeker dat u het handtekenproces in Kaleidos volledig wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt."
+  "verify-delete-all-sign-flow-data": "Bent u zeker dat u het handtekenproces volledig wilt verwijderen uit Kaleidos? Deze actie kan niet meer ongedaan gemaakt worden. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
+  "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden"
 }
