--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1228,5 +1228,6 @@
   "create-sign-flow-conflicting-signers-title": "Ondertekenaars zijn niet automatisch ingevuld",
   "create-sign-flow-conflicting-signers-message": "De gekozen bestanden zijn geagendeerd door verschillende ministers waardoor Kaleidos de ondertekenaars niet automatisch kan bepalen.",
   "creating-sign-flows-message": "Handtekenstromen worden aangemaakt. Dit kan even duren.",
-  "ongoing": "In verwerking"
+  "ongoing": "In verwerking",
+  "create-minutes-click-create-button-message": "Klik op \"Aanmaken\" om de notulen aan te maken"
 }
