fix github resolve conflict mistake

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1134,7 +1134,7 @@
   "last-seen": "Laatst gezien",
   "filter-on-rights": "Filteren op rechtengroep",
   "filter-on-last-seen": "Filteren op laatst gezien",
-  "blocked-on": "Geblokkeerd op",Admin should be able to do it
+  "blocked-on": "Geblokkeerd op",
   "filter-on-organization": "Filteren op organisatie",
   "id-or-organization": "Organisatie ID of naam",
   "list-of-ovo-codes": "Lijst met OVO codes",
