--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -54,6 +54,7 @@
   "agendaitem-documents-documents-for-publication": "Documenten voor publicatie",
   "agendaitem-grouping-message": "Agendapunten aan het groeperen",
   "agendaitems-document-loading-progress-message": "Documenten van {count}/{total} agendapunten geladen",
+  "all-filetypes": "Alle bestandtypes",
   "note": "Nota",
   "agendas": "Agenda’s",
   "previous-agendas": "Vorige agenda’s",
@@ -144,6 +145,7 @@
   "document-type": "Type document",
   "no-document-type": "Geen document type",
   "document-type-pdf": "PDF",
+  "document-type-pdf-only": "Enkel PDF",
   "documents": "Documenten",
   "linked-documents": "Reeds bezorgde documenten",
   "documents-attached-to": "Bijbehorende documenten",
@@ -171,6 +173,7 @@
   "error": "Er is iets misgelopen..",
   "name-document": "Naam document",
   "file-type": "Bestandstype",
+  "file-types": "Bestandstypes",
   "files-of": "bestanden van de",
   "filter": "Filter",
   "finished": "Afgewerkt",
