--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -54,7 +54,7 @@
   "agendaitem-documents-documents-for-publication": "Documenten voor publicatie",
   "agendaitem-grouping-message": "Agendapunten aan het groeperen",
   "agendaitems-document-loading-progress-message": "Documenten van {count}/{total} agendapunten geladen",
-  "all-filetypes": "Alle bestandtypes",
+  "all-filetypes": "Alle bestandstypes",
   "note": "Nota",
   "agendas": "Agenda’s",
   "previous-agendas": "Vorige agenda’s",
