chore: replace "Notificatie" with "Kopie verzenden"

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1191,7 +1191,7 @@
   "signed": "Getekend",
   "sent": "Verstuurd",
   "edit-list": "Lijst bewerken",
-  "signing-hub-notifications": "Notificaties",
+  "signing-hub-cc": "Kopie verzenden",
   "to-sign-by": "Te handtekenen door",
   "to-approve-by": "Goed te keuren door",
   "to-approve": "Goed te keuren",
