--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1207,7 +1207,7 @@
   "to-approve-by": "Goed te keuren door",
   "to-approve": "Goed te keuren",
   "refused": "Geweigerd",
-  "cancelled": "Geannulleerd",
+  "cancelled": "Geannuleerd",
   "no-signers-selected": "Geen ondertekenaars gekozen",
   "no-approvers-selected": "Geen goedkeurders gekozen",
   "no-notification-addresses-selected": "Geen notificatieadressen gekozen",
