add functionality in bulk edit modal to mark piece for signing and create signflow upon saving

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1023,6 +1023,7 @@
   "published-in-belgian-official-gazette-on": "Gepubliceerd in Belgisch Staatsblad op",
   "publication-empty": "Er is nog geen publicatie aangevraagd.",
   "search-error": "Er ging iets mis bij het zoeken",
+  "signature": "Handtekenen",
   "signatures": "Handtekeningen",
   "open-version": "Open versie",
   "signature-folder": "Handtekenmap",
