--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1246,5 +1246,6 @@
   "verify-delete-all-sign-flow-data": "Bent u zeker dat u het handtekenproces volledig wilt verwijderen uit Kaleidos? Deze actie kan niet meer ongedaan gemaakt worden. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
   "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
   "to-start-up": "Op te starten",
-  "to-follow-up": "Op te volgen"
+  "to-follow-up": "Op te volgen",
+  "stop-sign-flow": "Tekenen stopzetten"
 }
