feat: add thread id to publication flow

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -780,6 +780,7 @@
   "publication-flow-opening-date": "Datum ontvangst",
   "kind-of-publication": "Wijze van publicatie",
   "publication-flow-numac-number": "Numac",
+  "publication-flow-thread-id": "Thread ID",
   "publication-flow-number-of-extracts": "Aantal uittreksels",
   "not-known": "Niet gekend",
   "requests": "Aanvragen",
