--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1248,5 +1248,6 @@
   "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
   "to-start-up": "Op te starten",
   "to-follow-up": "Op te volgen",
-  "stop-sign-flow": "Tekenen stopzetten"
+  "stop-sign-flow": "Tekenen stopzetten",
+  "sign-flow-was-sent-while-you-were-editing": "De sign flow is reeds verstuurd naar de Handtekenmap terwijl u probeerde te editeren."
 }
