feat: add message if no mandatees

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -202,6 +202,7 @@
   "latest-modified": "Laatst gewijzigd",
   "latest-modified-on": "Laatst gewijzigd op",
   "linked-mandatees": "Gekoppelde mandatarissen",
+  "no-linked-mandatees": "Geen gekoppelde mandatarissen",
   "loading-text": "Pagina is aan het laden",
   "search-loading-text": "Aan het zoeken",
   "login": "Aanmelden",
