Small tweaks to labels

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -462,7 +462,7 @@
   "fill-in-search-term": "Gelieve een zoekterm in te vullen.",
   "no-results-found-modify-term": "Er werden geen resultaten gevonden. Pas je trefwoord en filters aan.",
   "no-results-found-modify-filter": "Er werden geen resultaten gevonden. Pas je filters aan.",
-  "add-notification": "Notificatie toevoegen",
+  "add-notification": "Kopie verzenden naar",
   "notification-loading-text": "De notificatie wordt geladen.",
   "new-agendaitem": "Nieuw agendapunt",
   "from": "Van",
@@ -1207,7 +1207,7 @@
   "signed": "Getekend",
   "sent": "Verstuurd",
   "edit-list": "Lijst bewerken",
-  "signing-hub-cc": "Kopie verzenden",
+  "signing-hub-cc": "Kopie verzenden naar",
   "to-sign-by": "Te handtekenen door",
   "to-approve-by": "Goed te keuren door",
   "to-approve": "Goed te keuren",
@@ -1222,7 +1222,7 @@
   "filter-content": "Filter inhoud",
   "apply": "Toepassen",
   "email-address": "E-mailadres",
-  "add-approval": "Goedkeuring toevoegen",
+  "add-approval": "Goed te keuren door",
   "start-signing": "Tekenen opstarten",
   "cannot-sign": "Kan niet ondertekenen",
   "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden.",
