--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -631,7 +631,7 @@
   "manage-user": "Gebruiker: {firstName} {lastName}",
   "manage-organization": "Organisatie: {name}",
   "changes-could-not-be-saved-title": "Je wijzigingen kunnen niet opgeslagen worden.",
-  "changes-could-not-be-saved-message": "{modelName} werd {time} aangepast door {firstname} {lastname}. Noteer je wijzigingen en hernieuw deze pagina om de laatste aanpassingen te zien.",
+  "changes-could-not-be-saved-message": "{modelName} werd {time} geleden aangepast door {firstname} {lastname}. Noteer je wijzigingen en hernieuw deze pagina om de laatste aanpassingen te zien.",
   "nota-changed-message": "Pas op, deze nota werd aangepast op {date} om {time}.",
   "select-minister": "Selecteer een minister",
   "agenda-comment-type-here": "Typ hier jouw opmerking...",
@@ -935,6 +935,7 @@
   "publications-reports--modal-title": "Rapport: {title}",
   "year": "Jaar",
   "generate-report": "Rapport maken",
+  "report": "rapport",
   "publications-reports--generate--small": "Maak",
   "show-filter": "Toon filter",
   "filter-plural": "Filteren",
