--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1253,5 +1253,7 @@
   "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is reeds verstuurd naar de Handtekenmap. De nieuwe versie is niet geüpload.",
   "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is reeds verstuurd naar de Handtekenmap. De wijzigingen zijn niet opgeslagen.",
   "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is reeds verstuurd naar de Handtekenmap. Het document is niet verwijderd uit Kaleidos.",
-  "secretary-for-meeting": "Secretaris voor de vergadering"
+  "secretary-for-meeting": "Secretaris voor de vergadering",
+  "secretary": "Secretaris",
+  "no-secretary-assigned": "Er werd nog geen secretaris toegewezen"
 }
