add decision and notes signature section

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1252,5 +1252,7 @@
   "stop-sign-flow": "Tekenen stopzetten",
   "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is reeds verstuurd naar de Handtekenmap. De nieuwe versie is niet geüpload.",
   "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is reeds verstuurd naar de Handtekenmap. De wijzigingen zijn niet opgeslagen.",
-  "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is reeds verstuurd naar de Handtekenmap. Het document is niet verwijderd uit Kaleidos."
+  "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is reeds verstuurd naar de Handtekenmap. Het document is niet verwijderd uit Kaleidos.",
+  "decisions-and-notes-to-start-up": "Beslissingen en notulen",
+  "decisions-and-notes-to-follow-up": "Beslissingen en notulen opvolgen"
 }
