change decision editor edit button to one button per editor

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -357,6 +357,7 @@
   "show-remarks": "Toon opmerkingen",
   "sign-out": "Afmelden",
   "signed-decision-add": "Beslissingsfiche uploaden",
+  "signed-decision-create": "Beslissingsfiche aanmaken",
   "single-newsletter": "Losstaand kort bestek",
   "sort-by": "Sorteren op",
   "size-extension": "KB",
