--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -632,6 +632,7 @@
   "manage-organization": "Organisatie: {name}",
   "changes-could-not-be-saved-title": "Je wijzigingen kunnen niet opgeslagen worden.",
   "changes-could-not-be-saved-message": "{modelName} werd {time} aangepast door {firstname} {lastname}. Noteer je wijzigingen en hernieuw deze pagina om de laatste aanpassingen te zien.",
+  "action-could-not-be-executed-title": "Je actie kon niet worden uitgevoerd.",
   "nota-changed-message": "Pas op, deze nota werd aangepast op {date} om {time}.",
   "select-minister": "Selecteer een minister",
   "agenda-comment-type-here": "Typ hier jouw opmerking...",
