chore: add edits requested by Hilde

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -399,7 +399,8 @@
   "user": "Gebruiker",
   "user-role": "Gebruikersrol",
   "please-be-patient": "Even geduld aub...",
-  "warning-text": "Venster sluiten",
+  "thanks-for-your-patience": "Dank voor uw geduld",
+  "warning-text": "Venster sluiten.",
   "continue": "Doorgaan",
   "warning-title": "Opgelet!",
   "show-minutes": "Verslag openen",
@@ -1224,33 +1225,34 @@
   "email-address": "E-mailadres",
   "add-approval": "Goed te keuren door",
   "start-signing": "Tekenen opstarten",
-  "cannot-sign": "Kan niet ondertekenen",
-  "cannot-sign-message": "Dit stuk is niet verbonden aan een agendapunt en kan niet aangeboden worden om getekend te worden.",
-  "cannot-create-sign-flow-message": "Dit stuk is niet ingediend door uw mandataris en kan niet aangeboden worden om getekend te worden.",
+  "cannot-sign": "Ondertekenen is niet mogelijk",
+  "cannot-sign-message": "Dit document is niet gekoppeld aan een agendapunt. Het is niet mogelijk om de ondertekenflow op te starten.",
+  "cannot-create-sign-flow-message": "Dit document is niet ingediend door uw minister. U kunt de ondertekenflow niet opstarten.",
   "signed-document": "Getekend document",
   "on": "op",
   "start-signing-for-n-selected-documents": "Tekenen opstarten voor {n, plural, =1 {1 geselecteerd document} other { # geselecteerde documenten }}",
   "create-sign-flow-conflicting-signers-title": "Ondertekenaars zijn niet automatisch ingevuld",
-  "create-sign-flow-conflicting-signers-message": "De gekozen bestanden zijn geagendeerd door verschillende ministers waardoor Kaleidos de ondertekenaars niet automatisch kan bepalen.",
-  "creating-sign-flows-message": "Handtekenstromen worden aangemaakt. Dit kan even duren.",
+  "create-sign-flow-conflicting-signers-message": "De geselecteerde documenten zijn door verschillende ministers ingediend. Kaleidos kan de namen van de ondertekenaars niet automatisch invullen.",
+  "creating-sign-flows-message": "De ondertekenflows worden aangemaakt in de digitale handtekenmap. Dit kan even duren.",
   "ongoing": "In verwerking",
   "create-minutes-click-create-button-message": "Klik op \"Aanmaken\" om de notulen aan te maken",
   "no-minutes-for-meeting": "Er zijn nog geen notulen voor deze vergadering",
-  "create-sign-flow-error-message": "Er ging iets mis met het doorsturen van dit document, contacteer kaleidos.servicedesk@vlaanderen.be als het probleem aanhoudt.",
-  "create-sign-marking-error-message": "Er ging iets mis met het markeren van dit document voor handtekenen, contacteer kaleidos.servicedesk@vlaanderen.be als het probleem aanhoudt.",
-  "successfully-started-sign-flow": "Tekenproces succesvol opgestart",
-  "successfully-started-sign-flows": "Tekenprocessen succesvol opgestart",
-  "document-was-sent-to-signinghub": "Het document werd doorgestuurd naar SigningHub en kan worden voorbereid",
+  "create-sign-flow-error-message": "Het document is niet doorgestuurd naar de digitale handtekenmap. Probeer het opnieuw. Als het probleem niet opgelost is, neem dan contact op met kaleidos.servicedesk@vlaanderen.be.",
+  "create-sign-marking-error-message": "De gegevens van het document werden gewijzigd. Refresh het scherm en probeer vervolgens opnieuw om het document te markeren.",
+  "successfully-started-sign-flow": "De ondertekenflow is succesvol opgestart.",
+  "successfully-started-sign-flows": "De ondertekenflows zijn succesvol opgestart.",
+  "document-was-sent-to-signinghub": "Het document is beschikbaar in de handtekenmap. U kunt het daar voorbereiden voor ondertekening.",
   "documents-were-sent-to-signinghub": "De documenten werden doorgestuurd naar SigningHub en kunnen worden voorbereid",
   "delete-signed-piece": "Getekend document verwijderen",
   "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess voor dit document zal mee verwijderd worden uit Kaleidos. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
-  "delete-all-sign-flow-data": "Verwijder volledig handtekeningproces",
-  "verify-delete-all-sign-flow-data": "Bent u zeker dat u het handtekenproces volledig wilt verwijderen uit Kaleidos? Deze actie kan niet meer ongedaan gemaakt worden. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
+  "delete-all-sign-flow-data": "Verwijder de volledige ondertekenflow",
+  "verify-delete-all-sign-flow-data": "Bent u zeker dat u de ondertekening in Kaleidos wilt verwijderen? Deze actie kan niet ongedaan gemaakt worden. Vergeet niet om de flow ook in de handtekenmap stop te zetten. Dit gebeurt niet automatisch.",
   "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
   "to-start-up": "Op te starten",
   "to-follow-up": "Op te volgen",
   "stop-sign-flow": "Tekenen stopzetten",
-  "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is reeds verstuurd naar de Handtekenmap. De nieuwe versie is niet geüpload.",
-  "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is reeds verstuurd naar de Handtekenmap. De wijzigingen zijn niet opgeslagen.",
-  "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is reeds verstuurd naar de Handtekenmap. Het document is niet verwijderd uit Kaleidos."
+  "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is naar de handtekenmap verzonden. Het is niet mogelijk om een nieuwe versie op te laden.",
+  "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is naar de handtekenmap verzonden. Het is niet mogelijk om de gegevens van het document aan te passen.",
+  "sign-flow-was-sent-while-you-were-editing-could-not-delete": "Dit document is naar de handtekenmap verzonden. Het is niet mogelijk om het document in Kaleidos te verwijderen.",
+  "sign-flow-was-sent-cannot-stop-it": "De ondertekenflow is opgestart. Het is niet mogelijk om de flow te stoppen. Neem contact op met de Secretarie."
 }
