KAS-4257 change sign flow messages not listed in word file

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1150,7 +1150,6 @@
   "documents-on-approved-agenda-with-next-version": "Er is een recentere versie van deze agenda.",
   "documents-on-approved-agenda-message": "Bent U zeker dat U de documenten wilt wijzigen op deze goedgekeurde agendaversie?",
   "filtered-subcase-documents": "Hier worden enkel de documenten getoond die op de meest recente agenda staan + documenten die niet op een agenda staan.",
-  "to-sign": "Te handtekenen",
   "copy": "Kopiëren",
   "text-copied": "Tekst gekopieerd naar klembord.",
   "change-role": "Profiel switchen",
@@ -1242,12 +1241,12 @@
   "successfully-started-sign-flow": "De ondertekenflow is succesvol opgestart.",
   "successfully-started-sign-flows": "De ondertekenflows zijn succesvol opgestart.",
   "document-was-sent-to-signinghub": "Het document is beschikbaar in de handtekenmap. U kunt het daar voorbereiden voor ondertekening.",
-  "documents-were-sent-to-signinghub": "De documenten werden doorgestuurd naar SigningHub en kunnen worden voorbereid",
+  "documents-were-sent-to-signinghub": "De documenten zijn beschikbaar in de handtekenmap. U kunt ze daar voorbereiden voor ondertekening.",
   "delete-signed-piece": "Getekend document verwijderen",
-  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. Het volledige handtekenprocess voor dit document zal mee verwijderd worden uit Kaleidos. In Signinghub zal het proces blijven bestaan tenzij dit manueel verwijderd wordt.",
+  "verify-delete-signed-piece": "Bent u zeker dat u het getekend document wilt verwijderen? Deze actie kan niet meer ongedaan gemaakt worden. De volledige ondertekenflow voor dit document zal mee verwijderd worden uit Kaleidos. In Signinghub zal de flow blijven bestaan tenzij dit manueel verwijderd wordt.",
   "delete-all-sign-flow-data": "Verwijder de volledige ondertekenflow",
   "verify-delete-all-sign-flow-data": "Bent u zeker dat u de ondertekening in Kaleidos wilt verwijderen? Deze actie kan niet ongedaan gemaakt worden. Vergeet niet om de flow ook in de handtekenmap stop te zetten. Dit gebeurt niet automatisch.",
-  "delete-all-sign-flow-tooltip": "Verwijder het volledige handtekenproces uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
+  "delete-all-sign-flow-tooltip": "Verwijder de volledige ondertekenflow uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
   "to-start-up": "Op te starten",
   "to-follow-up": "Op te volgen",
   "stop-sign-flow": "Tekenen stopzetten",
