--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -1027,7 +1027,7 @@
   "publication-empty": "Er is nog geen publicatie aangevraagd.",
   "search-error": "Er ging iets mis bij het zoeken",
   "signature": "Ondertekenen",
-  "signatures": "Handtekeningen",
+  "signatures": "Ondertekenen",
   "x-documents-selected": "{count, plural, =1 {# document} other {# documenten}} geselecteerd",
   "counselor": "Raadgever",
   "date-approved": "Datum goedgekeurd",
@@ -1224,8 +1224,8 @@
   "delete-all-sign-flow-data": "Verwijder de volledige ondertekenflow",
   "verify-delete-all-sign-flow-data": "Bent u zeker dat u de ondertekening in Kaleidos wilt verwijderen? Deze actie kan niet ongedaan gemaakt worden. Vergeet niet om de flow ook in het platform Digitaal Ondertekenen stop te zetten. Dit gebeurt niet automatisch.",
   "delete-all-sign-flow-tooltip": "Verwijder de volledige ondertekenflow uit Kaleidos, zodat het document opnieuw ondertekend kan worden",
-  "to-start-up": "Op te starten",
-  "to-follow-up": "Op te volgen",
+  "to-start-up": "Opstarten",
+  "to-follow-up": "Opvolgen",
   "stop-sign-flow": "Ondertekenen stopzetten",
   "sign-flow-was-sent-while-you-were-editing-could-not-add-new-version": "Dit document is naar het platform Digitaal Ondertekenen verzonden. Het is niet mogelijk om een nieuwe versie op te laden.",
   "sign-flow-was-sent-while-you-were-editing-could-not-edit": "Dit document is naar het platform Digitaal Ondertekenen verzonden. Het is niet mogelijk om de gegevens van het document aan te passen.",
