chore: add digital signing help menu items

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -962,6 +962,8 @@
   "upload-translation-document": "Vertaling opladen",
   "edit-translation-activity": "Vertaling bewerken",
   "look-at-documentation": "Bekijk documentatie website",
+  "guideline-digital-signing": "Leidraad digitaal ondertekenen",
+  "screencast-digital-signing": "Screencast digitaal ondertekenen",
   "contact-us": "Contacteer ons",
   "email-servicedesk": "kaleidos.servicedesk@vlaanderen.be",
   "my-profile": "Mijn profiel",
