--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -53,7 +53,7 @@
   "agendaitems-empty-result": "Geen agendapunten gevonden",
   "agendaitem-documents-documents-for-publication": "Documenten voor publicatie",
   "agendaitem-grouping-message": "Agendapunten aan het groeperen",
-  "agendaitems-document-loading-progress-message": "Documenten van {count}/{total} agendapunten geladen",
+  "agendaitems-document-loading-progress-message": "{count} van {total} agendapunten geladen",
   "all-filetypes": "Alle bestandstypes",
   "note": "Nota",
   "agendas": "Agenda’s",
