KAS-4263 Refactor legacy toaster services, components & instances (part 2)

--- a/translations/nl-be.json
+++ b/translations/nl-be.json
@@ -40,7 +40,7 @@
   "agenda-release-decisions": "Beslissingen vrijgeven",
   "agenda-publish-planned": "Plan document publicatie",
   "agenda-version": "Agenda versie",
-  "agenda-documents-download-ready": "Uw archiefbestand is klaar",
+  "agenda-documents-download-ready": "Uw archiefbestand is klaar.",
   "agendaitem-case": "Dossier",
   "agendaitem-decision": "Beslissing",
   "agendaitem-title": "Type dossiers & titels",
